PR 102 fixes